--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div id="logo" onclick="slowScroll('#top')">
-      <img src="https://i.gifer.com/origin/7e/7e88c9b3b61e00121dbec00b03e872da.gif" alt="">
+      <img src="https://ibb.co/DQz8Qs8" alt="">
     </div>
     <div id="about">
       <a href="#" title="История" onclick="slowScroll('#main')">История</a>
