--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div id="logo" onclick="slowScroll('#top')">
-      <img src="https://i.postimg.cc/3xKY8jRt/logo-Life-P.gif" alt="">
+      <img src="https://i.postimg.cc/jd8BhqDx/lp.gif" alt="">
     </div>
     <div id="about">
       <a href="#" title="История" onclick="slowScroll('#main')">История</a>
