--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   </header>
 
   <div id="top">
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_wyfpergc.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop controls autoplay></lottie-player>
+    <h1>Мир анимации</h1>
     <h3>Мультимедийные технологии в анимации</h3>
   </div>
 
