--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div>
       <span class="title">Музыкальные видео</span><br>
       <iframe width=450 height="252" src="https://www.youtube.com/embed/x0aKF3dbbeY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <span class="heading">Если у вас есть музыка или готвые концепты персонажем. Мы занимаемя разработкоой анимации для музыкальных клипов.  Мы можем сделать клип в определенном стиле.  </span>
+      <span class="heading">Если у вас есть музыка или готвые концепты персонажей. Мы занимаемя разработкоой анимации для музыкальных клипов.  Мы можем сделать клип в определенном стиле.  </span>
       <p></p>
     
     </div>
