--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div>
       <span class="title">Оригинальные проекты</span><br>
       <iframe width="450" height="252" src="https://www.youtube.com/embed/PIWKlMm1ZC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <span class="heading">Привлекает режиссура и сценарное мастерство. Мы срадостью заемеся анимацие для вашего проекта. По вопросвм оригнальных идей обращатся в соцсетях  </span>
+      <span class="heading">Привлекает режиссура и сценарное мастерство. Мы с радостью займемся анимацие для вашего проекта. По вопросам оригнальных идей обращатся в соцсетях  </span>
       <p></p>
    
       
