--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <span>Seagull production это команда разрабатывающая анимационные проекты.</span>
     </div>
     <div class="text">
-      <span>Мы работаем в таких программах как Blender, Adobe animation, Adobe Photoshop, Adobe after effect. Создавая работы в различных стилях и сомещаея Компьютерную графику и традиционный стиль.
+      <span>Мы работаем в таких программах как Blender, Adobe animation, Adobe Photoshop, Adobe after effect. Создавая работы в различных стилях и совмещаея компьютерную графику и традиционный стиль.
     </div>
   </div>
 
@@ -42,11 +42,11 @@
 
     <div class="img">
       <img src="https://psv4.userapi.com/c536436/u506838934/docs/d25/f9b41861f25e/eri.gif?extra=h03nfiHsQ39Wo0M9dAnSyyWezjrORWh_oWDma7O_f-RGlMpD6oXcjzcSaKurlckWsBFO4pV9Q2nkB7-QAeOmIdgferwfQZobRHfKatdMYYg-tJCT47MItLaGEG2JO94cDM_ppkHmZEUgRcCsiPqzBTIu">
-      <span></span>
+      <span>Классическая техника</span>
     </div>
     <div class="img">
       <img src="https://psv4.userapi.com/c536436/u506838934/docs/d36/2c6a9eb2933f/roof_1.gif?extra=9qKZkaImpch4CfdgUNyGz8zb6-oBrS89Y-Yvme8FIys3v9L1IuRWL6d9kTlnsiJprVgyWACLTbET0ITOgswjR5QxsBacsEh-vX-v4qRn_8ZzbLxqS2twHL5x6w-uzHrZufW6a9Gt_jOSa2OIp1esaZpd">
-      <span></span>
+      <span>Компьютерная анимация и традиционная</span>
     </div>
   </div>
 
@@ -74,7 +74,7 @@
     <div>
       <span class="title">Оригинальные проекты</span><br>
       <iframe width="450" height="252" src="https://www.youtube.com/embed/PIWKlMm1ZC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <span class="heading">Привлекает режиссура и сценарное мастерство. Мы с радостью займемся анимацией для вашего проекта. По вопросам оригинальных идей обращатся в соцсетях  </span>
+      <span class="heading">Привлекает режиссура и сценарное мастерство. Мы с радостью займемся анимацией для вашего проекта. По вопросам оригинальных идей обратиться в соцсетях  </span>
       <p></p>
    
       
