--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <h4>От идей до полноценной анимации</h4>
 
     <div class="img">
-      <img src="https://psv4.userapi.com/c536436/u506838934/docs/d25/928705c15405/eri.gif?extra=Zjm4FD2miGTZUGaKX1xR9RJWUIuzca4_j2hzdgsGI5jGrmRw6ZneRH2ZzlnYwOn1_LPmvAEw8XQbwhfH-_V4SMN9ejZ7oblgj08k3DfkdLZRXDTAe8dhLSLiIzOzWI__5uj5jN0oTWsI3TlnX1I3eSQ">
+      <img src="https://vk.com/doc506838934_621710491?hash=gMWWVePwZ5K1wKrQc3Fu84imusIxOC5LD4QoDzo8smg&dl=RraBEWrw0bpZZlDZzQdfubqHQbgCylzyiJlwHRzlR6c&wnd=1&module=im&mp4=1">
       <span>Классическая техника</span>
     </div>
     <div class="img">
-      <img src="https://psv4.userapi.com/c536436/u506838934/docs/d36/69932b25fa8d/roof_1.gif?extra=4AAS5eghjpTL3LdxZg1NO530c6kcAmwUMUouJPyZP-6DqTTBmHitDMIHtvR_vWWzqVaDq3MIHz0JuVsY4Nm_nRdNR4J4_LY4F9sD9h4z9Jksr7iCFjFxW37EQuWUnSwrUIMuTr0FZWfjNfvbj56P9EU">
+      <img src="https://vk.com/doc506838934_621706896?hash=Iq7rg2eke63uNu5slQ0ZWi9no4ZvJXTi85bemBr93Co&dl=6AKXvzQOMsozeGfIxlG4RiGAPgvZQeZ5oofALmqIxAw&wnd=1&module=im&mp4=1">
       <span>Компьютерная анимация и традиционная</span>
     </div>
   </div>
@@ -57,12 +57,12 @@
   <div id="contacts">
     <div class="intro">
       <h3>Компьютерная анимация </h3>
-      <img src="https://psv4.userapi.com/c536132/u506838934/docs/d50/7a1c98d58d2c/3d.gif?extra=WqU2SZ7xqF6sMsDdyED1OdO_Nmw89ASdLSw1oFH1XrE7HAaz36uw_hSf_HUUDJEInmDnaYIIzCQsfOfNpNsd7GC3rLHIfcT11QP7Nnp47jw8XtYP-f2czC0ZWZl5CLkwS9lxjAtcNeaEsItPlVCKXIo">
+      <img src="https://vk.com/doc506838934_621714360?hash=WjP3prXZlzKwr0d9gc8zqxPjocZ2ziBUa8h53KyxMTk&dl=g84JFlEgP8uaj9xEyDPnsabswixK40Uc2LZO9xHOKxT&wnd=1&module=im&mp4=1">
       <span></span>
     </div>
     <div class="text">
      <h3>Традиционная анимация</h3>
-      <img src="https://psv4.userapi.com/c536132/u506838934/docs/d6/1b0ea13ba8fb/2d-krosy_1.gif?extra=4ySZ4JGSstVLOxYeIbhRyKbvJHeqh0745tscDTnJjHB4RJkm6i9O3ORGj4K3GQE_6HFRCTrsvu8i9aZAdQiM2QKEvKUhmkLlOVyZ6xwZmwQhY-A2GJ3CnwBtQdPUsMB33T-qF63Oo96vQZUxXsh5YiM">
+      <img src="https://vk.com/doc506838934_621714374?hash=zSz2N9OSA7Iu0fFB2La5HKlk66CVZNYFAzrA6QOUWdD&dl=aH1p0atQB5R3Gb1kKDHHNEbSY0OsY3QNGhdh4bYW4CL&wnd=1&module=im&mp4=1">
     </div>
     
 
