--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <h4>От идей до полноценной анимации</h4>
 
     <div class="img">
-      <img src="https://vk.com/doc506838934_621710491?hash=gMWWVePwZ5K1wKrQc3Fu84imusIxOC5LD4QoDzo8smg&dl=RraBEWrw0bpZZlDZzQdfubqHQbgCylzyiJlwHRzlR6c&wnd=1&module=im&mp4=1">
+      <img src="https://psv4.userapi.com/c536436/u506838934/docs/d25/d024c3ab09d0/eri.gif?extra=kK8ISQ0gQQHE7pbbdXpSkQuWCMkBnXxzBLf1RstyZUr0nQUIUyobNFmCtZ_2eZ4C2S4CC9iiW1Lm7EVyhvyTefWXmMf59N1RxRg6VXDEj79oySWrK1p-eA-fj0Rgfn83LRZC0IPM-VB22syXvCvgzL4">
       <span>Классическая техника</span>
     </div>
     <div class="img">
-      <img src="https://vk.com/doc506838934_621706896?hash=Iq7rg2eke63uNu5slQ0ZWi9no4ZvJXTi85bemBr93Co&dl=6AKXvzQOMsozeGfIxlG4RiGAPgvZQeZ5oofALmqIxAw&wnd=1&module=im&mp4=1">
+      <img src="https://psv4.userapi.com/c536436/u506838934/docs/d36/96018d6324e6/roof_1.gif?extra=ysTgb1rqbiuDsm_ANoKB769uHZxI1dmPJMlJg2O1tc1aFIEmM6OQK0cNrdLEvR8G9pt4A4A-2foFodhHn46dYJezw9M7jGBknvp2x4hi2S1Syiyy0eDTPYJgoXO3ZGE33crhBg9NUE7PDPw89Z3qq9c">
       <span>Компьютерная анимация и традиционная</span>
     </div>
   </div>
@@ -57,12 +57,12 @@
   <div id="contacts">
     <div class="intro">
       <h3>Компьютерная анимация </h3>
-      <img src="https://vk.com/doc506838934_621714360?hash=WjP3prXZlzKwr0d9gc8zqxPjocZ2ziBUa8h53KyxMTk&dl=g84JFlEgP8uaj9xEyDPnsabswixK40Uc2LZO9xHOKxT&wnd=1&module=im&mp4=1">
+      <img src="https://psv4.userapi.com/c536132/u506838934/docs/d50/b4e3a3faca55/3d.gif?extra=bOc0jl3eUvM8QZhCLPhfeUQ8698y8fUrKjCv6FsPbG1gY5s2JKan9-y6OwoXg1hn7kzlYCgCANX4q4bzMR1XVwfRcngce_gfDKYyTYsw6F4Lr5ce1TBuRkxpWRQTYe6jLIzpfE5ANVZkKwY8GbiR6oo">
       <span></span>
     </div>
     <div class="text">
      <h3>Традиционная анимация</h3>
-      <img src="https://vk.com/doc506838934_621714374?hash=zSz2N9OSA7Iu0fFB2La5HKlk66CVZNYFAzrA6QOUWdD&dl=aH1p0atQB5R3Gb1kKDHHNEbSY0OsY3QNGhdh4bYW4CL&wnd=1&module=im&mp4=1">
+      <img src="https://psv4.userapi.com/c536132/u506838934/docs/d6/881f7c924050/2d-krosy_1.gif?extra=iTxfkc7cuqcoQMrRgaS1NIcnw4hKo1MBI5cKBV8GWff0KTBWL0C_lUet4j1pi6_VAJzYHtEHK9jdyWGQNlpGm4YtPaNOSwKndaUymAR6MWL2pNjLxSUQOU2awlFCRZ2WTQCp_lXgGA70IndtbGOyDaA">
     </div>
     
 
